--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
+fastmcp>=0.2.0
+chromadb>=0.5.0
+voyageai>=0.3.5
+cohere>=5.0.0
+python-dotenv>=1.0.0
+chonkie>=1.4.1
+pyyaml>=6.0.0
 rank-bm25>=0.2.2
-nltk>=3.8.1
