Update config for env var overrides, update .gitignore
- src/config.py: Allow CHROMA_DB_PATH and COLLECTION_NAME env overrides
- .gitignore: Add ragdoc-env/, ragdoc-env-new/, run-mcp.sh
- Add .mcp.json

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,10 @@ ragdoc-tui.bat
 config/local.yaml
 config/*_local.yaml
 config/*.local.yaml
+
+# Virtual environments
+ragdoc-env/
+ragdoc-env-new/
+
+# MCP runtime
+run-mcp.sh
